# ml-python

./: .gitignore  LICENSE  README.md
1_data_manipulations/: Pandas_data_manipulations_tasks.ipynb  student_answers.txt
2_data_exploration/: eda.ipynb
4_overfitting_regularization/: overfitting_regularization.ipynb
6_feature_engineering_selection/: homework.ipynb
7_trees_and_ensembles/: rf_classifier.ipynb
8_clustering/: clustering.ipynb
9_evaluation_selection/: README.md  mypy.ini  pyproject.toml
9_evaluation_selection/src/forest_ml/: data.py  final_prediction.py  main.py  pipeline.py  search_logistic.py  train.py  train_logistic.py  train_rfc.py
9_evaluation_selection/src/forest_ml/utils/: EDA.py  mlflow_utils.py
9_evaluation_selection/tests/: test_train_logistic.py  test_train_logistic_opt.py  test_train_rfc.py  test_train_rfc_opt.py
