[tool.poetry]
name = "forest_ml"
version = "0.1.0"
description = ""
authors = ["Aslamov Yury <aslamov.yura@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pendulum = "^2.1.2"
pandas = "^1.4.2"
sklearn = "^0.0"
click = "^8.1.3"
mlflow = "^1.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
